# datadoggo-v2

./: .gitignore  AGENTS.md  Justfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  claude.yml  python-ci.yml
docs/: concept.md  design.md
docs/issue/: 001_feed_table_plan.md  002_feed_cqrs_refactor.md  003_rss_link_metadata_plan.md  004_loguru_error_logging_plan.md  005_article_feature_plan.md  006_feed_schema_without_rss_bucket_plan.md  007_rename_feed_table.md  008_rss_conversion_responsibility.md  009+_refactor_all_detailed.md  009_refactor_all.md
docs/issue/closed/: 001_feed_table_plan.md  002_feed_cqrs_refactor.md  003_rss_link_metadata_plan.md  004_loguru_error_logging_plan.md  005_article_feature_plan.md  006_feed_schema_without_rss_bucket_plan.md  007_rename_feed_table.md
mock/: redirect.html
src/: conftest.py  sub.py
src/domain/: common.py
src/domain/finance/: __init__.py
src/domain/news/: article.py  common.py  feed.py  model.py  rss.py
src/domain/news/article/: __init__.py  command.py  fetch.py  model.py  search.py
src/domain/news/feed/: command.py  convert.py  model.py  persistence.py  search.py  service.py
src/domain/news/request_queue/: command.py
src/domain/news/rss/: common.py  facade.py  fetch.py  load.py  model.py  search.py  service.py
src/domain/news/rss_link/: command.py  convert.py  facade.py  fetch.py  load.py  model.py  search.py  service.py
src/domain/request_queue/: command.py  model.py  service.py
src/domain/task_queue/http_request/: command.py  common.py  model.py  search.py  service.py
src/infra/: app_log.py  compression.py  compute.py  generate.py  logger.py  logging.py  naming.py  parallel.py  parse.py  rds.py  runtime.py
src/infra/api/: browser.py  https.py  pydoll.py  pydoll_dd.py
src/infra/api/browser/: __init__.py  core.py  extract.py  extraction.py  fetch.py  fetcher.py
src/infra/parse/: html.py  rss.py
src/infra/storage/: bucket.py  file.py  rds.py
src/infra/storage/file/: load.py  (+1 more)
src/infra/web/: browser.py  https.py
src/workflow/: news.py
tests/: conftest.py
tests/domain/: test_common.py
tests/infra/: test_compression.py  test_compute.py  test_logging.py  test_naming.py  test_parse.py
tests/infra/api/: test_https.py
tests/infra/storage/: test_bucket.py  test_file.py  test_rds.py
(+22 files in other folders)
