[project]
name = "datadoggo-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]  # `uv pip install -e .`

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["*.py"]
addopts = "--import-mode=importlib"
