[project]
name = "datadoggo-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.9",
    "pydoll-python>=2.8.0",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
    "boto3>=1.35.0",
    "zstandard>=0.23.0",
    "moto[s3]>=5.1.13",
    "sqlmodel>=0.0.25",
    "pyyaml>=6.0.2",
    "loguru>=0.7.3",
]

[tool.setuptools.packages.find]
where = ["src"]  # `uv pip install -e .`

[dependency-groups]
dev = [
    "pyfakefs>=5.9.3",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
python_files = ["*.py", "test_*.py"]
addopts = "--import-mode=importlib -m 'not online'"
markers = [
    "online: marks tests as requiring internet connection (deselect with '-m \"not online\"')"
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "PL"]
ignore = ["PLC0415"]
